SOLR-18329: drop getExistenceQuery javadoc; use List.of in test